--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -1,8 +1,9 @@
 //顏色變數
 
-//注區文字
+//注區顏色
 $betArea_yellow:#ffd236;
 $betArea_red:#bd0505;
+$betArea_border:gray;
 
 //注意這裡的路徑要放引用的SCSS檔案的相對路徑
 //網站圖片
