--- a/src/assets/css/scss/layout/_grid.scss
+++ b/src/assets/css/scss/layout/_grid.scss
@@ -38,7 +38,7 @@
 	align-items: center;
 	color: white;
 	font-size: 2rem;
-	border: 1px solid gray;
+	border: 1px solid $betArea_border;
 	text-align: center;
 	line-height: 1.55em;
 }
