--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -42,10 +42,10 @@
 	text-align: center;
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
-	border-bottom-color: #FFF;
+	border-bottom-color: $betArea_border;
 	border-top-width: 1px;
 	border-top-style: solid;
-	border-top-color: #CCC;
+	border-top-color: $betArea_border;
 }
 .betArea .ems{
 	float: left;
