--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -171,8 +171,8 @@ img {
 }
 
 .header-logo {
-  float: left;
-  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -1340,8 +1340,10 @@ cockroach-blue {
     height: 100px;
   }
   .header-logo {
-    width: 15%;
+    float: left;
+    width: auto !important;
     height: 100%;
+    margin-left: 1.25rem;
     padding-top: 5px;
     padding-bottom: 0px;
   }
@@ -1349,12 +1351,17 @@ cockroach-blue {
     height: 100%;
   }
   .header-btnList {
-    width: 85%;
+    width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .header-btn {
     width: 30%;
     line-height: 4.75rem;
-    font-size: 205%;
+    font-size: 250%;
   }
   .header-bottom {
     display: none;
@@ -1901,8 +1908,8 @@ cockroach-blue {
     height: 50px;
   }
   .header-btn {
+    font-size: 205%;
     line-height: 1.5rem;
-    width: 28%;
   }
   .video-box {
     height: 288px;
@@ -2199,8 +2206,10 @@ cockroach-blue {
   .header {
     height: 50px;
   }
+  .header-btnList {
+    width: 60%;
+  }
   .header-btn {
-    width: 26%;
     line-height: 1.75rem;
     font-size: 130%;
   }
@@ -2336,6 +2345,9 @@ cockroach-blue {
   .video-box {
     height: 195px;
   }
+  .header-btnList {
+    width: 57%;
+  }
   .betArea {
     height: 260px;
   }
@@ -2365,7 +2377,6 @@ cockroach-blue {
     height: 40px;
   }
   .header-btn {
-    width: 24%;
     line-height: 1rem;
     font-size: 100%;
   }
@@ -2481,6 +2492,392 @@ cockroach-blue {
   .bankerNum {
     right: 0%;
     top: 50%;
+  }
+  .BeadPlate-B {
+    width: 12px;
+    height: 12px;
+    background-position: 0px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-B-BPair {
+    width: 12px;
+    height: 12px;
+    background-position: -12px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-B-PPair {
+    width: 12px;
+    height: 12px;
+    background-position: -24px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-B-BothPair {
+    width: 12px;
+    height: 12px;
+    background-position: -36px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-P {
+    width: 12px;
+    height: 12px;
+    background-position: -48px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-P-BPair {
+    width: 12px;
+    height: 12px;
+    background-position: -60px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-P-PPair {
+    width: 12px;
+    height: 12px;
+    background-position: -72px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-P-BothPair {
+    width: 12px;
+    height: 12px;
+    background-position: -84px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-T {
+    width: 12px;
+    height: 12px;
+    background-position: -96px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-T-BPair {
+    width: 12px;
+    height: 12px;
+    background-position: -108px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-T-PPair {
+    width: 12px;
+    height: 12px;
+    background-position: -120px 0px;
+    background-size: 192px auto;
+  }
+  .BeadPlate-T-BothPair {
+    width: 12px;
+    height: 12px;
+    background-position: -132px 0px;
+    background-size: 192px auto;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .header {
+    height: 50px;
+  }
+  .header-logo {
+    margin-left: 0;
+  }
+  .header-btn {
+    width: 100%;
+    line-height: 1.75rem;
+    font-size: 100%;
+  }
+  .header-btnList {
+    width: 49%;
+  }
+  .video-box {
+    height: 190px;
+  }
+  .gameHistory {
+    height: 100px;
+  }
+  .gainMoney {
+    font-size: 80%;
+  }
+  .result-text {
+    font-size: 130%;
+  }
+  .betArea {
+    height: 280px;
+  }
+  .betArea-item {
+    font-size: 1rem;
+  }
+  .alertFont {
+    font-size: 1.2rem !important;
+  }
+  .betStatus {
+    font-size: 1rem;
+  }
+  .betArea-mobile {
+    height: 192px;
+  }
+  .betArea-mobile-container {
+    height: 192px;
+  }
+  .coin-menu1 {
+    width: 47.4px;
+    height: 39px;
+    background-position: 0px 0px;
+    background-size: 237px 78px;
+  }
+  .coin-menu1:hover, .coin-menu1-current {
+    width: 47.4px;
+    height: 39px;
+    background-position: 0px -39px;
+    background-size: 237px 78px;
+  }
+  .coin-menu2 {
+    width: 47.4px;
+    height: 39px;
+    background-position: -47.4px 0px;
+    background-size: 237px 78px;
+  }
+  .coin-menu2:hover, .coin-menu2-current {
+    width: 47.4px;
+    height: 39px;
+    background-position: -47.4px -39px;
+    background-size: 237px 78px;
+  }
+  .coin-menu3 {
+    width: 47.4px;
+    height: 39px;
+    background-position: -94.8px 0px;
+    background-size: 237px 78px;
+  }
+  .coin-menu3:hover, .coin-menu3-current {
+    width: 47.4px;
+    height: 39px;
+    background-position: -94.8px -39px;
+    background-size: 237px 78px;
+  }
+  .coin-menu4 {
+    width: 47.4px;
+    height: 39px;
+    background-position: -142.2px 0px;
+    background-size: 237px 78px;
+  }
+  .coin-menu4:hover, .coin-menu4-current {
+    width: 47.4px;
+    height: 39px;
+    background-position: -142.2px -39px;
+    background-size: 237px 78px;
+  }
+  .coin-menu5 {
+    width: 47.4px;
+    height: 39px;
+    background-position: -189.6px 0px;
+    background-size: 237px 78px;
+  }
+  .coin-menu5:hover, .coin-menu5-current {
+    width: 47.4px;
+    height: 39px;
+    background-position: -189.6px -39px;
+    background-size: 237px 78px;
+  }
+  .card-container {
+    margin-top: -35px;
+  }
+  .BeadPlate-B {
+    width: 10px;
+    height: 10px;
+    background-position: 0px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-B-BPair {
+    width: 10px;
+    height: 10px;
+    background-position: -10px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-B-PPair {
+    width: 10px;
+    height: 10px;
+    background-position: -20px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-B-BothPair {
+    width: 10px;
+    height: 10px;
+    background-position: -30px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-P {
+    width: 10px;
+    height: 10px;
+    background-position: -40px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-P-BPair {
+    width: 10px;
+    height: 10px;
+    background-position: -50px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-P-PPair {
+    width: 10px;
+    height: 10px;
+    background-position: -60px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-P-BothPair {
+    width: 10px;
+    height: 10px;
+    background-position: -70px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-T {
+    width: 10px;
+    height: 10px;
+    background-position: -80px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-T-BPair {
+    width: 10px;
+    height: 10px;
+    background-position: -90px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-T-PPair {
+    width: 10px;
+    height: 10px;
+    background-position: -100px 0px;
+    background-size: 160px auto;
+  }
+  .BeadPlate-T-BothPair {
+    width: 10px;
+    height: 10px;
+    background-position: -110px 0px;
+    background-size: 160px auto;
+  }
+  .big-B {
+    width: 6px;
+    height: 6px;
+    background-position: 0px 6px;
+    background-size: 96px auto;
+  }
+  .big-B-BPair {
+    width: 6px;
+    height: 6px;
+    background-position: -6px 6px;
+    background-size: 96px auto;
+  }
+  .big-B-PPair {
+    width: 6px;
+    height: 6px;
+    background-position: -12px 6px;
+    background-size: 96px auto;
+  }
+  .big-B-BothPair {
+    width: 6px;
+    height: 6px;
+    background-position: -18px 6px;
+    background-size: 96px auto;
+  }
+  .big-BT {
+    width: 6px;
+    height: 6px;
+    background-position: -24px 6px;
+    background-size: 96px auto;
+  }
+  .big-BT-BPair {
+    width: 6px;
+    height: 6px;
+    background-position: -30px 6px;
+    background-size: 96px auto;
+  }
+  .big-BT-PPair {
+    width: 6px;
+    height: 6px;
+    background-position: -36px 6px;
+    background-size: 96px auto;
+  }
+  .big-BT-BothPair {
+    width: 6px;
+    height: 6px;
+    background-position: -42px 6px;
+    background-size: 96px auto;
+  }
+  .big-P {
+    width: 6px;
+    height: 6px;
+    background-position: -48px 6px;
+    background-size: 96px auto;
+  }
+  .big-P-BPair {
+    width: 6px;
+    height: 6px;
+    background-position: -54px 6px;
+    background-size: 96px auto;
+  }
+  .big-P-PPair {
+    width: 6px;
+    height: 6px;
+    background-position: -60px 6px;
+    background-size: 96px auto;
+  }
+  .big-P-BothPair {
+    width: 6px;
+    height: 6px;
+    background-position: -66px 6px;
+    background-size: 96px auto;
+  }
+  .big-PT {
+    width: 6px;
+    height: 6px;
+    background-position: -72px 6px;
+    background-size: 96px auto;
+  }
+  .big-PT-BPair {
+    width: 6px;
+    height: 6px;
+    background-position: -78px 6px;
+    background-size: 96px auto;
+  }
+  .big-PT-PPair {
+    width: 6px;
+    height: 6px;
+    background-position: -84px 6px;
+    background-size: 96px auto;
+  }
+  .big-PT-BothPair {
+    width: 6px;
+    height: 6px;
+    background-position: -90px 6px;
+    background-size: 96px auto;
+  }
+  .small-red {
+    width: 2px;
+    height: 2px;
+    background-position: -24px 0px;
+    background-size: 32px auto;
+  }
+  .small-blue {
+    width: 2px;
+    height: 2px;
+    background-position: -28px 0px;
+    background-size: 32px auto;
+  }
+  .bigEye-red {
+    width: 2px;
+    height: 2px;
+    background-position: 0px 2px;
+    background-size: 32px auto;
+  }
+  .bigEye-blue {
+    width: 2px;
+    height: 2px;
+    background-position: -16px 2px;
+    background-size: 32px auto;
+  }
+  cockroach-red {
+    width: 2px;
+    height: 2px;
+    background-position: -26px 0px;
+    background-size: 32px auto;
+  }
+  cockroach-blue {
+    width: 2px;
+    height: 2px;
+    background-position: -30px 0px;
+    background-size: 32px auto;
   }
 }
 /*# sourceMappingURL=all.css.map */
