--- a/src/assets/css/scss/layout/_header.scss
+++ b/src/assets/css/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 //header
 .header-logo{
-	float: left;
-	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
