--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -2,6 +2,7 @@
     background-image: $loading-img;
     background-color: #644d31;
     text-align: center;
+    z-index: 10;
 }
 .gameResultLoading{
     // left:25%;
