//更新使用者下注資訊表格

--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -19,6 +19,7 @@
 @import './scss//components/loading';
 @import './scss/components/poker';
 @import './scss/components//counter';
+@import './scss/components/userBetInfo';
 //rwd
 @import './scss/rwd/rwd';
 	
