--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1004,6 +1004,41 @@ cockroach-blue {
   border-radius: 50%;
 }
 
+.userBetInfo-title {
+  text-align: center;
+  width: 25%;
+}
+
+.userBetInfo-content {
+  width: 75%;
+}
+
+.userBetInfo-footer {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.page-link:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.userBetInfoTitle {
+  color: yellow;
+  text-align: center;
+}
+
+.userBetInfo-footer .page-link {
+  color: black;
+}
+
+.userBetInfo-footer .page-item.active .page-link {
+  background-color: #644d31;
+  border-color: olive;
+  color: yellow;
+}
+
 /*-------------------------------------------
      自適應設定區
 -------------------------------------------*/
@@ -2340,6 +2375,9 @@ cockroach-blue {
   .result-text {
     font-size: 150%;
   }
+  .userBetInfo-title {
+    font-size: 1.1rem;
+  }
 }
 
 @media screen and (max-width: 375px) {
@@ -2370,6 +2408,9 @@ cockroach-blue {
   .playerNum {
     left: 3%;
     top: 50%;
+  }
+  .userBetInfo-title {
+    font-size: 1rem;
   }
 }
 
@@ -2565,6 +2606,9 @@ cockroach-blue {
     height: 12px;
     background-position: -132px 0px;
     background-size: 192px auto;
+  }
+  .userBetInfo-title {
+    font-size: 0.5rem;
   }
 }
 
