//新增第六顆籌碼和顯示行動裝置的統計資訊

--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -14,6 +14,16 @@
             font-weight: bolder;
         }
     }
+    .mobilTableInfo{
+        display: none;
+    }
+    .bettingArea-betInfo{
+        display: flex;
+        justify-content: space-around;
+        p{
+            margin-bottom: 0;
+        }
+    }
     .gameresult{
         top:25%;
     }
