--- a/src/assets/css/scss/components/_coin.scss
+++ b/src/assets/css/scss/components/_coin.scss
@@ -41,20 +41,31 @@
 	@extend %coin;
 	@include coinSpritePosition(-316,-65,1)
 }
+.coin-menu6{
+	@extend %coin;
+	@include coinSpritePosition(-316,0,1)
+}
+.coin-menu6:hover,.coin-menu6-current{
+	@extend %coin;
+	@include coinSpritePosition(-316,-65,1)
+}
 
 //籌碼子彈
 .ammo100{
-	left:5%;
+	left:3%;
 }
 .ammo500{
-	left:25%;
+	left:20%;
 }
 .ammo1000{
-	left:45%;
+	left:35%;
 }
 .ammo5000{
-	left:65%;
+	left:50%;
 }
 .ammo10000{
-   left:85%;
+   left:70%;
 }
+.ammo100000{
+	left:85%;
+ }
