--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -23,42 +23,6 @@
 	.gameHistory{
 		height:30%;
 	}
-	.coin-menu1{
-		@include coinSpritePosition(0,0,0.9)
-	}
-	.coin-menu1:hover,.coin-menu1-current{
-		@include coinSpritePosition(0,-65,0.9)
-	}
-	.coin-menu2{
-		@include coinSpritePosition(-79,0,0.9)
-	}
-	.coin-menu2:hover,.coin-menu2-current{
-		@include coinSpritePosition(-79,-65,0.9)
-	}
-	.coin-menu3{
-		@include coinSpritePosition(-158,0,0.9)
-	}
-	.coin-menu3:hover,.coin-menu3-current{
-		@include coinSpritePosition(-158,-65,0.9)
-	}
-	.coin-menu4{
-		@include coinSpritePosition(-237,0,0.9)
-	}
-	.coin-menu4:hover,.coin-menu4-current{
-		@include coinSpritePosition(-237,-65,0.9)
-	}
-	.coin-menu5{
-		@include coinSpritePosition(-316,0,0.9)
-	}
-	.coin-menu5:hover,.coin-menu5-current{
-		@include coinSpritePosition(-316,-65,0.9)
-	}
-	.coin-menu6{
-		@include coinSpritePosition(-316,0,0.9)
-	}
-	.coin-menu6:hover,.coin-menu6-current{
-		@include coinSpritePosition(-316,-65,0.9)
-	}
 }
 @media screen and (max-width: 1280px) {
 	.text-md-left,.text-md-right{
@@ -119,10 +83,10 @@
 		@include coinSpritePosition(-316,-65,0.7)
 	}
 	.coin-menu6{
-		@include coinSpritePosition(-316,0,0.7)
+		@include coinSpritePosition(-395,0,0.7)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
-		@include coinSpritePosition(-316,-65,0.7)
+		@include coinSpritePosition(-395,-65,0.7)
 	}
 	//路圖圖示區
 	//珠仔路
@@ -250,6 +214,11 @@
 	.header{
 		width: 100%;
 		height: 100px;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+	.header-userName{
+		border:none;
 	}
 	.header-logo{
 		float: left;
@@ -263,17 +232,22 @@
 		}
 	}
 	.header-btnList{
-		width: 60%;
+		width: auto;
 		display: flex;
 		justify-content: space-around;
 	}
 	.header-btn{
-		width:30%;
+		width:auto;
 		line-height: 4.75rem;
 		font-size:250%;
 	}
+	.header-top{
+		display: flex;
+	}
 	.header-bottom{  
-		display: none;
+		// display: none;
+		display: flex;
+		align-items: center;
 	}
 	.font-total{
 		line-height: 1.5em;
@@ -333,10 +307,10 @@
 		@include coinSpritePosition(-316,-65,1.6)
 	}
 	.coin-menu6{
-		@include coinSpritePosition(-316,0,1.6)
+		@include coinSpritePosition(-395,0,1.6)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
-		@include coinSpritePosition(-316,-65,1.6)
+		@include coinSpritePosition(-395,-65,1.6)
 	}
 	.betArea-item {
 		font-size: 2.5rem;
@@ -534,10 +508,10 @@
 		@include coinSpritePosition(-316,-65,1.2)
 	}
 	.coin-menu6{
-		@include coinSpritePosition(-316,0,1.2)
+		@include coinSpritePosition(-395,0,1.2)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
-		@include coinSpritePosition(-316,-65,1.2)
+		@include coinSpritePosition(-395,-65,1.2)
 	}
 	.betArea-mobile,.betArea-mobile-container{
 		height:145px;
@@ -701,10 +675,10 @@
 		@include coinSpritePosition(-316,-65,0.7)
 	}
 	.coin-menu6{
-		@include coinSpritePosition(-316,0,0.7)
+		@include coinSpritePosition(-395,0,0.7)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
-		@include coinSpritePosition(-316,-65,0.7)
+		@include coinSpritePosition(-395,-65,0.7)
 	}
 	.gameHistory{
 		height:130px;
@@ -836,6 +810,9 @@
 			line-height: 1.75rem;
 			font-size: 130%;;
 		}
+		.header-userName{
+			font-size: 0.5rem;
+		}
 		.video-box{
 			height:220px;
 		}
@@ -966,10 +943,10 @@
 			@include coinSpritePosition(-316,-65,0.6)
 		}
 		.coin-menu6{
-			@include coinSpritePosition(-316,0,0.6)
+			@include coinSpritePosition(-395,0,0.6)
 		}
 		.coin-menu6:hover,.coin-menu6-current{
-			@include coinSpritePosition(-316,-65,0.6)
+			@include coinSpritePosition(-395,-65,0.6)
 		}
 }	
 @media screen and (max-width: 320px) {
@@ -1152,10 +1129,10 @@
 		@include coinSpritePosition(-316,-65,0.5)
 	}
 	.coin-menu6{
-		@include coinSpritePosition(-316,0,0.5)
+		@include coinSpritePosition(-395,0,0.5)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
-		@include coinSpritePosition(-316,-65,0.5)
+		@include coinSpritePosition(-395,-65,0.5)
 	}
 	.card-container{
 		margin-top: -35px;
