--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1453,6 +1453,7 @@ cockroach-blue {
   }
   .header-userName {
     border: none;
+    line-height: 1rem;
   }
   .header-logo {
     float: left;
@@ -1487,9 +1488,18 @@ cockroach-blue {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header-userName {
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
   }
   .font-total {
     line-height: 1.5em;
