//修改統計資訊的顯示

--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -64,6 +64,11 @@
 }
 
 //選單區
+.betInfo-container{
+	width:93%;
+	margin-left: auto;
+	margin-right: auto;
+}
 .tabsArea{
 	-webkit-user-select:none;
 	-moz-user-select:none;
