--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -276,6 +276,12 @@ img {
   display: none;
 }
 
+.betInfo-container {
+  width: 93%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .tabsArea {
   -webkit-user-select: none;
   -moz-user-select: none;
